feat: DDD 重构，对接支付
DDD 重构，对接支付

--- a/s-pay-mall-ddd-domain/pom.xml
+++ b/s-pay-mall-ddd-domain/pom.xml
@@ -38,6 +38,12 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+        </dependency>
+        <!-- 系统模块 -->
         <!-- 系统模块 -->
         <dependency>
             <groupId>com.qx</groupId>
