--- a/docs/dev-ops/docker-compose-app.yml
+++ b/docs/dev-ops/docker-compose-app.yml
@@ -3,15 +3,27 @@ version: '3.8'
 # docker-compose -f docker-compose-app.yml up -d
 # 你需要修改system为你自身系统的仓库名
 services:
-  s-pay-mall-ddd:
-    image: system/s-pay-mall-ddd:1.0-SNAPSHOT
-    container_name: s-pay-mall-ddd
+  # 部署前端项目
+  nginx:
+    image: nginx:1.25.1
+    container_name: nginx
+    restart: always
+    ports:
+      - '443:443'
+      - '80:80'
+    volumes:
+      - ./nginx/html:/usr/share/nginx/html
+    privileged: true
+  # 部署后端项目
+  s-pay-mall:
+    image: system/s-pay-mall-ddd-app:1.0-SNAPSHOT
+    container_name: s-pay-mall
     restart: on-failure
     ports:
-      - "8091:8091"
+      - "8080:8080"
     environment:
       - TZ=PRC
-      - SERVER_PORT=8091
+      - SERVER_PORT=8080
     volumes:
       - ./log:/data/log
     logging:
