--- a/docs/dev-ops/docker-compose-app.yml
+++ b/docs/dev-ops/docker-compose-app.yml
@@ -16,7 +16,7 @@ services:
     privileged: true
   # 部署后端项目
   s-pay-mall:
-    image: system/s-pay-mall-ddd-app:1.0-SNAPSHOT
+    image: registry.cn-hangzhou.aliyuncs.com/qx-images/s-pay-ddd
     container_name: s-pay-mall
     restart: on-failure
     ports:
