--- a/s-pay-mall-ddd-app/Dockerfile
+++ b/s-pay-mall-ddd-app/Dockerfile
@@ -1,5 +1,5 @@
 # 基础镜像，可以先执行 docker pull openjdk:17-jdk-slim
-FROM registry.cn-hangzhou.aliyuncs.com/xfg-studio/openjdk:17-jre-slim
+FROM anolis-registry.cn-zhangjiakou.cr.aliyuncs.com/openanolis/openjdk:17-8.6
 
 # 作者
 MAINTAINER xiaofuge
