build(dev-ops): 更新 Docker Compose 配置
- 移除 s-pay-mall 服务镜像版本号，使用最新版本

--- a/docs/dev-ops/docker-compose-app.yml
+++ b/docs/dev-ops/docker-compose-app.yml
@@ -16,7 +16,7 @@ services:
     privileged: true
   # 部署后端项目
   s-pay-mall:
-    image: registry.cn-hangzhou.aliyuncs.com/qx-images/s-pay-ddd:1.0
+    image: registry.cn-hangzhou.aliyuncs.com/qx-images/s-pay-ddd
     container_name: s-pay-mall
     restart: on-failure
     ports:
