--- a/docs/dev-ops/docker-compose-app.yml
+++ b/docs/dev-ops/docker-compose-app.yml
@@ -19,6 +19,7 @@ services:
     image: registry.cn-hangzhou.aliyuncs.com/qx-images/s-pay-ddd:1.0.0
     container_name: s-pay-mall
     restart: on-failure
+    pull_policy: always
     ports:
       - "8080:8080"
     environment:
