feat: 调用拼团锁单接口
调用拼团锁单接口

--- a/docs/dev-ops/docker-compose-app.yml
+++ b/docs/dev-ops/docker-compose-app.yml
@@ -1,7 +1,7 @@
 # /usr/local/bin/docker-compose -f /docs/dev-ops/environment/environment-docker-compose-2.4.yml up -d
 version: '3.8'
 # docker-compose -f docker-compose-app.yml up -d
-# GIT_COMMIT_ID=$(git rev-parse --short=8 HEAD) docker-compose -f docker-compose-app.yml up -d
+# CI_COMMIT_ID=$(git rev-parse --short=8 HEAD) docker-compose -f docker-compose-app.yml up -d
 # 你需要修改system为你自身系统的仓库名
 services:
   # 部署前端项目
