--- a/s-pay-mall-ddd-app/src/main/resources/application-dev.yml
+++ b/s-pay-mall-ddd-app/src/main/resources/application-dev.yml
@@ -1,6 +1,19 @@
 server:
   port: 8080
 
+# 应用配置
+app:
+  config:
+    # 版本，方便通过接口版本升级
+    api-version: v1
+    # 跨域，开发阶段可以设置为 * 不限制
+    cross-origin: '*'
+    # SC 渠道配置 - 拼团对接渠道值、回调通知
+    group-buy-market:
+      api-url: http://127.0.0.1:8091
+      notify-url: http://127.0.0.1:8080/api/v1/test/group_buy_notify
+      source: s01
+      chanel: c01
 # 线程池配置
 thread:
   pool:
