--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,11 @@
                 <version>4.38.157.ALL</version>
             </dependency>
 
-
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.8.20</version>
+            </dependency>
             <!-- 工程模块 -->
             <dependency>
                 <groupId>com.qx</groupId>
