--- a/s-pay-mall-ddd-infrastructure/pom.xml
+++ b/s-pay-mall-ddd-infrastructure/pom.xml
@@ -31,6 +31,11 @@
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>adapter-rxjava2</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
         <!-- 系统模块 -->
         <dependency>
             <groupId>com.qx</groupId>
