--- a/s-pay-mall-ddd-app/pom.xml
+++ b/s-pay-mall-ddd-app/pom.xml
@@ -78,7 +78,10 @@
             <artifactId>converter-gson</artifactId>
             <version>2.9.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <!-- 工程模块；启动依赖 trigger->domain, infrastructure-->
         <dependency>
             <groupId>com.qx</groupId>
