--- a/s-pay-mall-ddd-app/src/main/resources/application-dev.yml
+++ b/s-pay-mall-ddd-app/src/main/resources/application-dev.yml
@@ -42,6 +42,28 @@ spring:
     connection-timeout: 30000 #数据库连接超时时间,默认30秒，即30000
     connection-test-query: SELECT 1
   type: com.zaxxer.hikari.HikariDataSource
+    # RabbitMQ
+  rabbitmq:
+    addresses: 117.72.48.228
+    port: 5672
+    username: admin
+    password: admin
+    listener:
+      simple:
+        prefetch: 1 # 每次投递n个消息，消费完在投递n个
+    template:
+      delivery-mode: persistent # 确保全局默认设置为持久化（可选）
+    # 消息配置
+    config:
+      consumer:
+        # 消费 topic 主题，team_success
+        topic_team_success:
+          # 绑定交换机 - 消息提供者的交换机
+          exchange: group_buy_market_exchange
+          # 消息主题
+          routing_key: topic.team_success
+          # 消费队列 - 每个系统有自己的消费队列
+          queue: s_pay_mall_queue_2_topic_team_success
 
 # MyBatis 配置【如需使用记得打开】
 mybatis:
