--- a/s-pay-mall-ddd-app/src/main/resources/application-dev.yml
+++ b/s-pay-mall-ddd-app/src/main/resources/application-dev.yml
@@ -55,6 +55,15 @@ spring:
       delivery-mode: persistent # 确保全局默认设置为持久化（可选）
     # 消息配置
     config:
+      producer:
+        # 主题配置
+        topic_order_pay_success:
+          # 绑定交换机
+          exchange: s_pay_mall_exchange
+          # 消费主题
+          routing_key: topic.order_pay_success
+          # 消费队列
+          queue: s_pay_mall_queue_2_order_pay_success
       consumer:
         # 消费 topic 主题，team_success
         topic_team_success:
@@ -64,6 +73,14 @@ spring:
           routing_key: topic.team_success
           # 消费队列 - 每个系统有自己的消费队列
           queue: s_pay_mall_queue_2_topic_team_success
+        # 主题配置
+        topic_order_pay_success:
+          # 绑定交换机
+          exchange: s_pay_mall_exchange
+          # 消费主题
+          routing_key: topic.order_pay_success
+          # 消费队列
+          queue: s_pay_mall_queue_2_order_pay_success
 
 # MyBatis 配置【如需使用记得打开】
 mybatis:
